--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Магазин -->
     <div id="shop" class="container">
 
-        <!-- 1. САЙТЫ -->
+        <!-- 1. САЙТЫ (Как было раньше) -->
         <div class="category-header">
             <h2><i class="fa-solid fa-code"></i> ВЕБ-РАЗРАБОТКА</h2>
         </div>
@@ -87,23 +87,14 @@
                 <div class="glow"></div>
                 <h3>НУБ-ТАРИФ</h3>
                 <div class="price">75 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> HTML5 Визитка</li>
-                    <li><i class="fa-solid fa-check"></i> Текст + Фото</li>
-                    <li><i class="fa-solid fa-check"></i> Быстрая загрузка</li>
-                </ul>
+                <p>Простой HTML сайт.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
             </div>
             <div class="card">
                 <div class="glow"></div>
                 <h3>ИГРОК-ТАРИФ</h3>
                 <div class="price">150 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> HTML5 + CSS3</li>
-                    <li><i class="fa-solid fa-check"></i> Стильный дизайн</li>
-                    <li><i class="fa-solid fa-check"></i> Анимации кнопок</li>
-                    <li><i class="fa-solid fa-check"></i> Мобильная версия</li>
-                </ul>
+                <p>HTML + CSS. Красивое оформление.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
             </div>
             <div class="card popular">
@@ -111,50 +102,53 @@
                 <div class="glow"></div>
                 <h3>ПРО-ТАРИФ</h3>
                 <div class="price">235 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> <b>Все из Игрока +</b></li>
-                    <li><i class="fa-solid fa-check"></i> JS Скрипты</li>
-                    <li><i class="fa-solid fa-check"></i> Интерактив</li>
-                    <li><i class="fa-solid fa-check"></i> SEO Оптимизация</li>
-                </ul>
+                <p>HTML+CSS+JS. Интерактив и скрипты.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card">
+                <div class="glow"></div>
+                <h3>БОСС-ТАРИФ</h3>
+                <div class="price">300 ₽</div>
+                <p>Полноценный лендинг под ключ.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
             </div>
             <div class="card wide">
                 <div class="glow"></div>
                 <h3>КОРОЛЕВСКИЙ VIP</h3>
                 <div class="price gold-text">600 ₽</div>
-                <p>Полный комплект под ключ: Админ-панель, Базы Данных, Сложная логика, Исходный код, Поддержка 24/7.</p>
-                <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ОФОРМИТЬ VIP</a>
+                <p>Гигант. Всё включено + Админка + Поддержка.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ЗАКАЗАТЬ VIP</a>
             </div>
         </div>
 
-        <!-- 2. ДИЗАЙН -->
+        <!-- 2. ДИЗАЙН (Исправлено по ТЗ) -->
         <div class="category-header">
-            <h2><i class="fa-solid fa-palette"></i> ДИЗАЙН</h2>
+            <h2><i class="fa-solid fa-paintbrush"></i> ГРАФИКА & АВАТАРКИ</h2>
         </div>
         <div class="cards-wrapper">
             <div class="card">
                 <div class="glow"></div>
-                <h3>ЛАЙТ АВА</h3>
+                <h3>НУБ АВА</h3>
                 <div class="price">40 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> Фон + Никнейм</li>
-                    <li><i class="fa-solid fa-check"></i> Цветокоррекция</li>
-                </ul>
+                <p>Простая обработка.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
             
-            <!-- Ава для сервера -->
+            <div class="card">
+                <div class="glow"></div>
+                <h3>ИГРОК АВА</h3>
+                <div class="price">60 ₽</div>
+                <p>Эффекты и цветокоррекция.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
+            </div>
+
+            <!-- Серверная аватарка (Твой запрос) -->
             <div class="card popular">
                 <div class="badge">MC</div>
                 <div class="glow"></div>
-                <h3>СЕРВЕР АВА</h3>
+                <h3>АВА ДЛЯ СЕРВЕРА</h3>
                 <div class="price">40 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-cube"></i> Тематика Minecraft</li>
-                    <li><i class="fa-solid fa-check"></i> Название сервера</li>
-                    <li><i class="fa-solid fa-check"></i> Яркие цвета</li>
-                </ul>
+                <p>Иконка для вашего сервера Minecraft.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
 
@@ -162,72 +156,110 @@
                 <div class="glow"></div>
                 <h3>ПРО АВА</h3>
                 <div class="price">100 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> 3D Текст / Глитч</li>
-                    <li><i class="fa-solid fa-check"></i> Сложная композиция</li>
-                    <li><i class="fa-solid fa-check"></i> Исходник (PSD)</li>
-                </ul>
+                <p>Сложный дизайн, 3D текст.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
 
-            <!-- Босс Дизайн -->
+            <!-- Босс Тариф (Твой запрос) -->
             <div class="card royal">
                 <div class="glow"></div>
-                <h3>BOSS ART</h3>
+                <h3>БОСС ТАРИФ</h3>
                 <div class="price gold-text">100 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-crown"></i> <b>Уникальный стиль</b></li>
-                    <li><i class="fa-solid fa-check"></i> Детализация X2</li>
-                    <li><i class="fa-solid fa-check"></i> Арт с нуля</li>
-                </ul>
+                <p>Максимальная проработка графики.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ЗАКАЗАТЬ</a>
             </div>
         </div>
 
-        <!-- 3. MINECRAFT -->
+        <!-- 3. MINECRAFT (Исправлено по ТЗ) -->
         <div class="category-header">
-            <h2><i class="fa-solid fa-cubes"></i> MINECRAFT</h2>
+            <h2><i class="fa-solid fa-cubes"></i> MINECRAFT УСЛУГИ</h2>
         </div>
+
+        <!-- Блок: СБОРКИ -->
+        <h3 class="sub-title">--- СБОРКИ СЕРВЕРОВ ---</h3>
         <div class="cards-wrapper">
             <div class="card">
                 <div class="glow"></div>
-                <h3>СТАРТОВЫЙ</h3>
+                <h3>СБОРКА ОПТИМИЗАЦИЯ</h3>
                 <div class="price">40 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> Установка Ядра (Paper)</li>
-                    <li><i class="fa-solid fa-check"></i> Настройка портов</li>
-                    <li><i class="fa-solid fa-check"></i> Оптимизация запуска</li>
-                </ul>
+                <p>Чистая сборка для максимального FPS.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
             
-            <!-- СЕРВЕР+ (Исправленный) -->
-            <div class="card popular">
-                <div class="badge">ВЫГОДНО</div>
+            <div class="card">
                 <div class="glow"></div>
-                <h3>СЕРВЕР+</h3>
-                <div class="price">100 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> <b>База + 5 Плагинов</b></li>
-                    <li><i class="fa-solid fa-check"></i> Настройка Прав (LP)</li>
-                    <li><i class="fa-solid fa-check"></i> Красивый Таб и Чат</li>
-                    <li><i class="fa-solid fa-check"></i> Система регистрации</li>
-                    <li><i class="fa-solid fa-check"></i> Защита от ботов</li>
-                </ul>
-                <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
+                <h3>СТАНДАРТНАЯ СБОРКА</h3>
+                <div class="price">50 ₽</div>
+                <p>Классический сервер для выживания.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
             </div>
 
-            <div class="card royal">
+            <div class="card popular">
+                <div class="badge">TOP</div>
                 <div class="glow"></div>
-                <h3>ПРО СБОРКА</h3>
-                <div class="price">200 ₽</div>
-                <ul class="features">
-                    <li><i class="fa-solid fa-check"></i> <b>Полная экономика</b></li>
-                    <li><i class="fa-solid fa-check"></i> Магазин и Аукцион</li>
-                    <li><i class="fa-solid fa-check"></i> Меню, Кейсы, NPC</li>
-                    <li><i class="fa-solid fa-check"></i> Готовый Спавн</li>
-                </ul>
-                <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
+                <h3>БОЛЬШАЯ + ОПТИМИЗАЦИЯ</h3>
+                <div class="price">100 ₽</div>
+                <p>Крупная сборка с настроенной оптимизацией.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+        </div>
+
+        <!-- Блок: СКРИПТЫ -->
+        <h3 class="sub-title">--- СОЗДАНИЕ СКРИПТОВ ---</h3>
+        <div class="cards-wrapper">
+            <div class="card">
+                <div class="glow"></div>
+                <h3>СЛАБЫЙ ПЛАГИН</h3>
+                <div class="price">20 ₽</div>
+                <p>Простой скрипт/плагин.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card">
+                <div class="glow"></div>
+                <h3>СТАНДАРТНЫЙ ПЛАГИН</h3>
+                <div class="price">60 ₽</div>
+                <p>Средняя сложность логики.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card popular">
+                <div class="glow"></div>
+                <h3>МОЩНЫЙ ПЛАГИН</h3>
+                <div class="price">150 ₽</div>
+                <p>Сложные системы и механики.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+        </div>
+
+        <!-- Блок: НАСТРОЙКА -->
+        <h3 class="sub-title">--- НАСТРОЙКА ПЛАГИНОВ ---</h3>
+        <div class="cards-wrapper">
+            <div class="card">
+                <div class="glow"></div>
+                <h3>СЛАБЫЙ ПЛАГИН</h3>
+                <div class="price">10 ₽</div>
+                <p>Простая настройка конфига.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card">
+                <div class="glow"></div>
+                <h3>СРЕДНИЙ ПЛАГИН</h3>
+                <div class="price">35 ₽</div>
+                <p>Настройка прав и функционала.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card">
+                <div class="glow"></div>
+                <h3>МОЩНЫЙ ПЛАГИН</h3>
+                <div class="price">50 ₽</div>
+                <p>Детальная настройка сложных систем.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn">ЗАКАЗАТЬ</a>
+            </div>
+            <div class="card wide royal">
+                <div class="glow"></div>
+                <h3>AC / ГИГАНТСКИЕ ПЛАГИНЫ</h3>
+                <div class="price gold-text">100-1000 ₽</div>
+                <p>Настройка Анти-Читов (AC) и глобальных модов/плагинов.</p>
+                <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ОБСУДИТЬ</a>
             </div>
         </div>
 
