--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="card wide royal">
                 <div class="glow"></div>
                 <h3>AC / ГИГАНТСКИЕ ПЛАГИНЫ</h3>
-                <div class="price gold-text">100-1000 ₽</div>
+                <div class="price gold-text">ОТ 100₽</div>
                 <p>Настройка Анти-Читов (AC) и глобальных модов/плагинов.</p>
                 <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ОБСУДИТЬ</a>
             </div>
